--- a/docs/getting-started/extensions.mdx
+++ b/docs/getting-started/extensions.mdx
@@ -3,9 +3,4 @@ title: "Understanding Assistants"
 description: "Continue offers two ways to configure your AI assistants"
 ---
 
-Continue offers flexible AI assistants that can be configured to match your development workflow. You can choose between:
-
-- **Hub Assistants** - Pre-configured assistants that sync across your IDE sessions
-- **Local Assistants** - Fully customizable assistants managed through config.yaml
-
-For detailed information about configuring assistants, including setup instructions and choosing between Hub and Local assistants, see our [configuration deep dive](/customize/deep-dives/configuration).
+This content has moved to our comprehensive guide: [Understanding Assistants: Hub vs Local Configuration](/guides/understanding-assistants)
