--- a/docs/getting-started/overview.mdx
+++ b/docs/getting-started/overview.mdx
@@ -3,6 +3,8 @@ title: "Overview"
 description: "To quickly understand what you can do with Continue, check out each tab below."
 ---
 
+## Features
+
 <Tabs>
 <Tab title="Agent">
 [Agent](/features/agent/quick-start) equips the Chat model with the tools needed to handle a wide range of coding tasks
@@ -54,3 +56,8 @@ description: "To quickly understand what you can do with Continue, check out eac
 </Info>
 </Tab>
 </Tabs>
+
+
+## AI Coding Assistants
+
+Continue offers flexible AI assistants that enhance your development workflow. You can choose between cloud-managed **Hub Assistants** for easy setup and synchronization, or **Local Assistants** for complete control and privacy. Learn more about [understanding and configuring assistants](/guides/understanding-assistants).
