Add CLI troubleshooting section with verbose logging info

--- a/docs/guides/cli.mdx
+++ b/docs/guides/cli.mdx
@@ -84,3 +84,9 @@ cn --ask Bash(curl*)
 # Never use the Fetch tool
 cn --exclude Fetch
 ```
+
+## Troubleshooting
+
+Run `cn` with the `--verbose` flag to see more detailed logs. These will be output to `~/.continue/logs/cn.log`.
+
+If you have feedback on the alpha, please [share in our Discord](https://discord.com/invite/EfJEfdFnDQ).
