--- a/docs/customize/model-providers/top-level/ollama.mdx
+++ b/docs/customize/model-providers/top-level/ollama.mdx
@@ -159,4 +159,6 @@ Ollama models usually have their capabilities auto-detected correctly. However, 
     </Tab>
 </Tabs>
 
-Note: Most standard Ollama models (like llama3.1, mistral, etc.) support tool use by default. Vision models (like llava) also support image input.
+<Note>
+Most standard Ollama models (like llama3.1, mistral, etc.) support tool use by default. Vision models (like llava) also support image input.
+</Note>
