--- a/docs/troubleshooting.mdx
+++ b/docs/troubleshooting.mdx
@@ -165,9 +165,9 @@ If you can't upload images:
 2. Ensure your model actually supports vision (e.g., gpt-4-vision, claude-3)
 3. Check that your provider passes through image data
 
-#### Override capabilities
+#### Add capabilities
 
-If Continue's autodetection isn't working correctly, you can manually specify capabilities in your `config.yaml`:
+If Continue's autodetection isn't working correctly, you can manually add capabilities in your `config.yaml`:
 
 ```yaml
 models:
